<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="geekgram.supernacho.ru.view.ThemeActivity">

    <ImageView
        android:id="@+id/iv_screen_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sc_green"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_theme_0"
        app:layout_constraintBottom_toTopOf="@id/iv_screen_lime"
        android:contentDescription="@string/screenshot_of_green_theme_desc" />

    <ImageView
        android:id="@+id/iv_screen_lime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sc_lime"
        app:layout_constraintTop_toBottomOf="@id/iv_screen_green"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_theme_1"
        app:layout_constraintBottom_toTopOf="@id/iv_screen_fox"
        android:contentDescription="@string/screenshot_of_lime_theme_desc" />

    <ImageView
        android:id="@+id/iv_screen_fox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sc_fox"
        app:layout_constraintTop_toBottomOf="@id/iv_screen_lime"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_theme_2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/screenshot_of_fox_theme_desc" />

    <Button
        android:id="@+id/button_theme_0"
        style="@style/ButtonStyle_zero"
        android:layout_width="@dimen/theme_bnt_width"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/theme_zero"
        app:layout_constraintBottom_toTopOf="@+id/button_theme_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@drawable/sc_green"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_theme_1"
        style="@style/ButtonStyle_one"
        android:layout_width="@dimen/theme_bnt_width"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/button_theme_one"
        android:textColor="@color/primaryTextColorYB"
        app:layout_constraintBottom_toTopOf="@+id/button_theme_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@drawable/sc_lime"
        app:layout_constraintTop_toBottomOf="@id/button_theme_0" />

    <Button
        android:id="@+id/button_theme_2"
        style="@style/ButtonStyle_two"
        android:layout_width="@dimen/theme_bnt_width"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/button_theme_two"
        android:textColor="@color/primaryTextColorYB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@drawable/sc_fox"
        app:layout_constraintTop_toBottomOf="@+id/button_theme_1" />
</android.support.constraint.ConstraintLayout>
