<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_one"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="?attr/cardViewOneStyle"
    app:cardCornerRadius="@dimen/card_view_corner_rad"
    app:cardUseCompatPadding="true"
    android:padding="@dimen/card_view_padding"
    android:layout_margin="@dimen/card_view_margin">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/relative_layout_cv_one"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_view_cv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_photo"
            app:layout_constraintBottom_toBottomOf="@id/relative_layout_cv_one"
            app:layout_constraintEnd_toEndOf="@id/relative_layout_cv_one"
            app:layout_constraintStart_toStartOf="@id/relative_layout_cv_one"
            app:layout_constraintTop_toTopOf="@id/relative_layout_cv_one"
            android:contentDescription="@string/description_image_holder_cv_one"/>

        <ImageButton
            android:id="@+id/image_button_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_view_margin"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_favorites_off"
            app:layout_constraintTop_toTopOf="@id/image_view_cv"
            app:layout_constraintEnd_toEndOf="@id/image_view_cv"
            android:contentDescription="@string/description_fav_image_button"/>
        <ImageView
            android:id="@+id/iv_sd_src"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_view_margin"
            android:src="@drawable/ic_sd_card"
            app:layout_constraintTop_toTopOf="@id/image_view_cv"
            app:layout_constraintStart_toStartOf="@id/image_view_cv"
            android:contentDescription="@string/card_view_source_icon" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>